# tiny-router

./: LICENSE  README.md  invoke.yaml  pyproject.toml  setup.cfg  tasks.py
examples/example1/: test_app.py
examples/simple/: app.py  request.py  router.py  test_app.py
examples/simple/routes/: __init__.py  create_user.py  get_user.py  list_users.py
examples/simple_regex/: app.py  request.py  response.py  router.py  test_app.py
examples/simple_regex/routes/: __init__.py  create_user.py  get_user.py  list_users.py
tests/: test_router.py  test_router_include.py
tests/simple/: test_add_and_resolve.py  test_include.py
tests/simple_regex/: test_add_and_resolve.py  test_include.py  test_matching_precedence.py
tests/simple_regex_router/: test_add_and_resolve.py
tests/simple_router/: test_add_and_resolve.py  test_include.py
tiny_router/: __init__.py  exceptions.py  router.py  simple.py  simple_router.py
tiny_router/routes/: __init__.py  routes.py  simple.py
tiny_router/simple/: __init__.py  router.py
tiny_router/simple_regex/: __init__.py  mapping.py  resource_resolver.py  router.py
