[tool.poetry]
name = "tiny-router"
version = "0.0.5"
license = "MIT"
description = "Tiny HTTP router"
authors = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
maintainers = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nekonoshiri/tiny-router"
repository = "https://github.com/nekonoshiri/tiny-router"
documentation = "https://github.com/nekonoshiri/tiny-router"
keywords = ["router"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7.2"  # for typing.OrderedDict
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.4.1"
isort = "^5.6.4"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
sphinx = "^3.3.1"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

