[tool.poetry]
name = "tiny-router"
version = "0.0.8"
license = "MIT"
description = "Tiny HTTP router"
authors = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
maintainers = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nekonoshiri/tiny-router"
repository = "https://github.com/nekonoshiri/tiny-router"
documentation = "https://github.com/nekonoshiri/tiny-router"
keywords = ["router"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7.2"  # for typing.OrderedDict
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.800"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

